# ChangeLog for dev-lang/v8
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.351 2013/10/16 12:48:51 ago Exp $

  16 Oct 2013; Agostino Sarubbo <ago@gentoo.org> v8-3.20.17.15.ebuild:
  Stable for x86, wrt bug #488148

  16 Oct 2013; Agostino Sarubbo <ago@gentoo.org> v8-3.20.17.15.ebuild:
  Stable for amd64, wrt bug #488148

*v8-3.20.17.15 (16 Oct 2013)

  16 Oct 2013; Mike Gilbert <floppym@gentoo.org> +v8-3.20.17.15.ebuild,
  -v8-3.19.18.18.ebuild, -v8-3.20.17.12.ebuild:
  Stable channel bump.

  02 Oct 2013; Agostino Sarubbo <ago@gentoo.org> v8-3.20.17.13.ebuild:
  Stable for x86, wrt bug #486742

  02 Oct 2013; Agostino Sarubbo <ago@gentoo.org> v8-3.20.17.13.ebuild:
  Stable for amd64, wrt bug #486742

*v8-3.20.17.13 (02 Oct 2013)

  02 Oct 2013; Mike Gilbert <floppym@gentoo.org> +v8-3.20.17.13.ebuild,
  -v8-3.20.17.7.ebuild:
  Stable channel bump.

*v8-3.20.17.12 (28 Sep 2013)

  28 Sep 2013; Mike Gilbert <floppym@gentoo.org> +v8-3.20.17.12.ebuild,
  -v8-3.20.17.2.ebuild, -v8-3.20.17.6.ebuild:
  Beta channel bump.

*v8-3.21.12.1 (20 Sep 2013)

  20 Sep 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.21.4.ebuild,
  +v8-3.21.12.1.ebuild:
  Dev channel bump. Remove old.

*v8-3.20.17.7 (14 Sep 2013)

  14 Sep 2013; Mike Gilbert <floppym@gentoo.org> +v8-3.20.17.7.ebuild:
  Beta channel bump.

*v8-3.20.17.6 (12 Sep 2013)

  12 Sep 2013; Mike Gilbert <floppym@gentoo.org> +v8-3.20.17.6.ebuild,
  -v8-3.20.15.5.ebuild, -v8-3.20.17.1.ebuild:
  Beta channel bump.

*v8-3.21.10.1 (10 Sep 2013)

  10 Sep 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.21.10.1.ebuild:
  Dev channel bump.

*v8-3.20.17.2 (02 Sep 2013)

  02 Sep 2013; Mike Gilbert <floppym@gentoo.org> +v8-3.20.17.2.ebuild,
  -v8-3.20.12.1.ebuild:
  Beta channel bump.

*v8-3.21.4 (31 Aug 2013)

  31 Aug 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.21.4.ebuild:
  Dev channel bump.

*v8-3.20.17.1 (23 Aug 2013)
