@@ -1,39 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX v8-3.10.8.10-darwin-arch.patch 1146 SHA256 4b352c597105d71a7f1c907062dec71891d7e89a9e8b617330509f60ba01cf88 SHA512 a137cf351b9c4f83fa31a8ec7acecd046683a1cdfe5247b41b3bce41ef4a47bf828738723f66b32c3b5f0e0c8f71cf5b36db9e8bb644c7f02e679c9002e39719 WHIRLPOOL 69b691d9f058621f5c2eef3e7a1c489345f0ef390778fef4296b538690d0d8e3ab13e45d111007742cea1d5160b9c1195308aead87b39ed8a605a6275e7e236d
 AUX v8-3.10.8.10-freebsd9.patch 421 SHA256 2cd4acf369ae32d549fbddfe5605379e1563a4227bae5a41b4de66078b7d75ad SHA512 3532cd316024fa6d0d8c0cbc4d3374913007da34ee8d33038e22d10a0c2663c2879c7b82b0b0edeb96c36adf8dc1ca02ff7f8ec4caf387f0f4031ba539f28631 WHIRLPOOL 3a419c10d1f5a2a1e00149b7219e121c91ce9791eb0b67608f69b27f4d2347703abd27a1ed51fa945dd14f6425b5e05fa93b932b470b407e4008673e83e518bc
 AUX v8-makefile-hardfp-r0.patch 462 SHA256 f4b0bbd7134856a0e4ff8895170818f3c7f8f1c566fd944583550b4af6b8d3a0 SHA512 b438a895cfaad18ea7a50fcce98269691bdc1bcb10b6f4829322a094235c593dac5e156eed803a9f9b0bed5f5f008e7bbc508ce6ecc8fb25c63731d4b024515f WHIRLPOOL 49fbfb6efe2e46ebf7d3de3729e59a610e984ab145aef68968ac8c14b147f4d714276930a809dce5307415fe3de5e6a4ec4a8f5c655a959358117a5ffeec7014
 AUX v8-vfp2-r0.patch 486 SHA256 3288919dd8561bb968f7d770fd3979ee143e317e07052b5926c29444c8a12703 SHA512 09e6583a501e1586f1eeea2c83af7cd94e22a43df37c7981ae4728ff42431f3ff3f8394fe67111b445e1230558070a9a98f744d194d7b70ce5a05579b21c3d59 WHIRLPOOL b999c9fbe2d5d2054a37525b38a3d22cd5ab699a195bb3cd8873a0c3e54e2b086a77267a390d16fa31f7c978bcc5949b8a37bd3ef1bca7363d62be22bd471ca3
-DIST v8-3.18.5.14.tar.bz2 10545347 SHA256 abd1d6fe04cbe36b6d315ae3c20a1c35ca61f9460969d269606782a124a10b91 SHA512 4a04d2fa7e90da7509dac1f136019647d545524018a0f96f582289179c09fc81ebaacf62abbf946d254ef94e4fe9ea43b09092dd9a9ac9da96012efec27df027 WHIRLPOOL e212f4b694dfccd89251a20763958da72cc1f50503d93c7a445db7cab757531893d8b8e1c5a601a5206324872fadea31fa769f8952d69dd32440c1fb20e71e27
 DIST v8-3.19.18.19.tar.bz2 10621763 SHA256 4230036b4e64d0a03dc3ab913ac0eb8c73b87c62cec9694de37dfd41a3fece8f SHA512 dfb385452acbf82bad046437605c42259b5df0d1a7c0019e3997f7f4e491e1384860e14aa7c561a0d8a0485c4fa934c4a026befc5197100f88560bea05082400 WHIRLPOOL 705f82a3a69a02c8f754075f88885bb85321fe1586937484b584eeda575ad5e7b712d642c4cbdef2ee77feb5b04f82510b3d0bd7f7a98ed4d4723dede5aae05e
 DIST v8-3.20.17.13.tar.bz2 46755305 SHA256 472dcceb944685243b405ec131e3205ef5754110b0031c2cb135a44db6fa8755 SHA512 141503b11c2d966d9e575bdd3703ac00aeef581c649493c0b9ead39218ac0b5a272bc253b0e5a21838398d3ecd1aa1cb70da1841d746cb3b201d94c5316ac8e8 WHIRLPOOL 66d1666feebe06c19bd583c951b3041270cb70cf6677ef4b5652f9a90c177cf5013af6e1ebbabed1b94c5bcf4cc829718474fea33bbc40a40df756bc53a3f60d
 DIST v8-3.20.17.15.tar.bz2 46752400 SHA256 3472726f4de152aeb7ea7c382d770f0fcb808c28d74660a58eaa230a7ce32285 SHA512 f819c89b500065622a291edafb9b3932c28a81cde6b4e1ac73b9f3280a34bfac7fe799bbf710fbeb519cab99e3ee47ab065050d806a0bce206e7855c503a07ae WHIRLPOOL 066eee830c04f396ea2ddd5c2ee62e841b9dd416e20bc44beb38fab0d953df40775dee4380886f905fb9c6eb53107f971065b4aaf7c668c09079b8d363faa342
 DIST v8-3.21.10.1-lite.tar.bz2 11909880 SHA256 deb3d3bcf15506245f52bfecb912397de99e9b62ab9d212d3a4e6afd37413988 SHA512 00526b5912a9a52c0f608b3c87098c651a44fe44f8ec380fdab16aab443d2d251716a56c45a2844a7037bc4fcab4d7d651de9c3018b4f85534de8f17dfb9be7b WHIRLPOOL d788a1e23270c26fe21819929b2568d0ea46959ffe4bb80ad70abf819f7e2e7ce68436a7338f2fccf389dbb427bcbbf6b289eb3742e66c8ffd0e03284df845c6
 DIST v8-3.21.12.1-lite.tar.bz2 11908651 SHA256 2ad11163400336dc20fa1f2fa0a303a10172b010dc7087f5aa667b3a84fa8d32 SHA512 c30daf609ce02d7c06a062d0e93f1cbdf1f7b8ad15dec4b8bff19baa6742da0d85d6868c188009769b0bf446af7d28a11a70c1c012d156b2120e4e442e9074de WHIRLPOOL 1c1fe934ad32daac02783c46a4e3ce9a51a5442d8aba41e38ff5fc27486a25dffa00e36a586f8943403c61ea75dc3dc0a1c8084387e4c7030893f89f1f541fb8
-EBUILD v8-3.18.5.14.ebuild 3957 SHA256 4ad1e7a783efefd4c38c46b31d2735f820ae098663556f0fd3b53677a2badc43 SHA512 3bfb9e3dbdcdfdf26fe0021f771a03b727b52e649da7cabf2de713c3c964098350a2539c298e7ec1521583c0d27a5d9b3ec4d03a6fdebbd884eb3df9e5b2a177 WHIRLPOOL 7d005efe557ef61166c25ee933e258a6a35181f849680c1ea551046957449f59972449cdc3052537ec0f388c96d11528464eef29cf2bf0d2c1342adc4ec84dcd
 EBUILD v8-3.19.18.19.ebuild 4605 SHA256 7f53d5ff6aea4729d784302e5320ef28ffe136607e5fdb7cd10155f8406d90ce SHA512 e2c1e99044a1eaa074b2e7c5166e50aed1e9e491aeedfa80441c2b8a35c298b0c02a65f6e751d1bc47850a077c5479957b3b02be86462197fe00929ccda83608 WHIRLPOOL 6b543e2da407374530cd8f26f11a252bc5c99ea72271e45e465ada8c1b30f9a79f49b17d8fa9afe4901ac3be00f55f94829c0eb2039df29581f343f6a1c3ea7b
 EBUILD v8-3.20.17.13.ebuild 4833 SHA256 e6954b6c93426b88b7d2a9fa1ca70a115f5d04febdcb8f220c45bc598657aec3 SHA512 bbd68af7bcd57e198449dfda91b2547a8ae6a38f0f7bd7f6604037ecd47c06d744a8c4b61337ffec00ed98b51bb2a63811a7fdf6b31247833e375f6a32c98eb1 WHIRLPOOL 4c55481471b2764f3eefa63c9eb0aa123025b1f5950ee338c0a3ce7c8a59b843d908d7efa7828f31a990bcea6d1fc21e29a48304682239be14039ef66e5b6133
 EBUILD v8-3.20.17.15.ebuild 4833 SHA256 6aaf3837e29a44b9a4e64452392cb848ee12a17765608ddb892b3662afc7721c SHA512 14dadc36d446231d1dd35d5b8161e7764215de9426c7c097fae5c6f4c6e4c4486f547a7f3c2bfa3feb09045cc8a0abebe8e7c84fe4c31c95f47723c0e4eb8220 WHIRLPOOL 2766168ffddbc7583ec326ae8f70f231562f1a4fae286d47bc611b0103ae057d0d92f20f21fcfc8cda2a68747353600c6895dcec3daaceebc77a9f68349b438e
 EBUILD v8-3.21.10.1.ebuild 4846 SHA256 c7f73b423bf2489695257f9b0514a931efa53c8c36fb7c3d1ade1536982a0b4f SHA512 683253afad7300b6f33af9e9eccb1326c2d8b38c071c33512e8bc4cd047c323efc9676f86535c171b21c92d929a2d4b2348cccdc0f7ce2c5d41e1e888c0d090c WHIRLPOOL bf2703b3373ef6861e213dd196d57c87c452139cdf80506fed5e5973a589f9b86bc9ecbe41c76468cd4f71be0d72d0286a3a0939d2f51fbe6c18c7e781049d21
 EBUILD v8-3.21.12.1.ebuild 4846 SHA256 ee48463a982772e394b1876b4051bf53b6eba5b21a51f25646a1e06d9fa72a5d SHA512 91df0ceef8aad579998928e65043ae8ee6e981eebeff76f6c7d13414f2a1cc4a035f0269c0f9f213902b43e7f4286721b263bc1242b312e69bd826899cd9efdc WHIRLPOOL 3d4877f33c126de0fc4e9dc6b3f7066393fe953028c294c7b2484f657fccf22963913dd6a3c6cc29a449a0fcb939cd3bcbec22c378a5723f59446783271cdc6d
 EBUILD v8-9999.ebuild 4535 SHA256 a6bf6fc089b3d463a08a8d5577d649937a383964f13309cdb9b02189685fc965 SHA512 bae59c6bffcd12aa6b8fa89eb1b909fce802c08ac7f6a9cb15f7465fc6b374a962ff5b200f696e203805dc199484be93ab013c0a27256c6ba4d75138f49f2e75 WHIRLPOOL 89c66fa3f0f4843aaec2c5785ba996ac0bc681e9064fbf6169a939cf0acf4281b55de68198d6092be50ccf766d9a1341f408f71c579f87f8c4eebe0dd31ab251
-MISC ChangeLog 53614 SHA256 4e3f9c8c8ff8be12e9f62617b508fa65b1f9c8d7e7b7f17670977196c3a541c1 SHA512 358859e52265d47ec97821ba185f330248a45cc552f42a8f529dfba275091a68f6723f1951ff5c411deb718bcd74700bdde9c5323a94f5afb8b69409ccafbc5f WHIRLPOOL 78f6a13a3dc91e6795725312b3052b368aff1edd078d1e09f6c6bd8d3509bd414907b8ccac1bfd776b9fa0d8b8801c008fd65e4e2406a35e8743d5cd5b1bbbcd
+MISC ChangeLog 53713 SHA256 8988d02b4638d22ff4aedebd258a41a3bdad6fdb3ad484d29ed627c010d1cbef SHA512 148b3902ae89db0ab1d454806eb90ac621fa61605e3b6ec9f96b8ec8abd1a663016388adb0b22379eaf858786aaf4a751deae4b6214d6eb2be29667dbceb36fb WHIRLPOOL 94dd57ecd969be44fc173c7481ad2f9aee6fdfdcea94d9d6e5e810d8848a742257fb863a1ab59e28b2caa792768f217f806bc1eb514b8fdb1e19677c55036800
 MISC metadata.xml 162 SHA256 8a3ecdcf518f45ec4843398f9896c9b4d1c867ff2cf2851cf40b06f756f111e8 SHA512 51796fe7e55b73dbfbe4a6b5fd089f5e8e4d327ff67d4a267692dda38380df5048ea77e8f058c466ae17726af5f099a3240b0500d53e421d95acc583164d3fe9 WHIRLPOOL 279b6ed997fab0d4278c01814bdd067068bceff8d1ce9933087828ce7598513b5a809013c996a3b134da6072c698a87ae151cfb56407fd62ff465b165197f5bf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSXopbAAoJELp701BxlEWfwhcP/3jPrTh+GP9IOhNwLAvUHDwt
-fKG1xqPAHQMECT1bQhl7tPKu9Nq9w7hT4MlbyCmSz9RvBHjLA1nrLOiTAQtWonQN
-/lNONTGxJqpeXhMglRMeoWRWsBO5dE8fXyrhqGUCPJOzH5YXd1wUaA66LOyhGpuw
-MA979hYzJ/chHmI/5XZG5l9iN0e/wOhzBSanjmagvEuSDKQMm4FJXT+UMqGPZ7DJ
-MPAPL4GOiu7/+N8h5TEOfKtBPFLFMWzvNh9WcpaOR2t3bJUkb11C12YjZvTAQo9L
-s+orj/oGJ1zhUQAsGOZM4Sij1Ppiv0md/6dm+frHBfhFDpxKqokM3zNty1H2ML74
-j9hXMLQE5CiRalDtAg71xEKWQoooga077puD+F3WdAr8hpWUjIuppbS/0XoZS0kr
-AK8rABbk2fnra0TYSFkUcgC/J/DyZ1YL9KzM8krCmPDjMl5iLqKxcM1eF/7cj53X
-rFAehmkOU2t9Jw27ot+BZ150VZCtZr+qh654yMxizXZtTw5NOM96+gfTSryeG6ZT
-SgOC3cQJf1S30ELmkrCwA7L5aeIiNH/GicEpR1YTGfQ9EP2GSpTXQps8fNGGL/ai
-55h/Ptb6bAG5/+KIdpTtU0ViF1mn17IUTGn/02dbBcOo8g9DYqwtlLiRtzfZe7eY
-dyqIA/XmlcfNZExnQMhp
-=OEm4
+iEYEAREIAAYFAlJ+zDcACgkQuUQtlDBCeQI8CwCfWmfm2AHR3j4FKCGL7c4n5YPO
+7ZkAn1ECrXo3Dn40Y1E7ZWlUaITAFaIC
+=zhM7
 -----END PGP SIGNATURE-----
