@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst setup test
-DEPEND=|| ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-2.6.8-r3:2.6 ) readline? ( sys-libs/readline:0 ) >=sys-apps/sed-4
-DESCRIPTION=Google's open source JavaScript engine
-EAPI=5
-HOMEPAGE=http://code.google.com/p/v8
-IUSE=neon readline
-KEYWORDS=amd64 ~arm x86 ~x86-fbsd ~x64-macos ~x86-macos
-LICENSE=BSD
-RDEPEND=readline? ( sys-libs/readline:0 )
-SLOT=0/3.18.5.14
-SRC_URI=https://commondatastorage.googleapis.com/chromium-browser-official/v8-3.18.5.14.tar.bz2
-_eclasses_=chromium	cb805b418b1d27c585f6b2a3321d19ee	eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	pax-utils	2424f959506320f5196de8f79fa05297	python-any-r1	08d3455b23110d650f173ab0a090818b	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=18fd12fb56c6ed555afa1a3caf3aaac9
