@@ -1,6 +1,6 @@
 ####################################################################
 
-# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.15193 2013/11/05 22:41:48 sochotnicky Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.15194 2013/11/09 23:56:28 phajdan.jr Exp $
 #
 # When you add an entry to the top of this file, add your name, the date, and
 # an explanation of why something is getting masked. Please be extremely
@@ -30,6 +30,12 @@
 ## app-misc/some-package
 
 #--- END OF EXAMPLES ---
+
+# Pawel Hajdan jr <phajdan.jr@gentoo.org> (09 Nov 2013)
+# Masked for removal in 30 days. Depends on vulnerable
+# version of dev-lang/v8, bug #484786. Also see
+# http://thread.gmane.org/gmane.linux.gentoo.devel/88811 .
+sci-geosciences/osgearth
 
 # Stanislav Ochotnicky (05 Nov 2013)
 # Masked for testing and waiting for #488074
