@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8341 2013/11/06 21:05:14 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8342 2013/11/09 23:56:28 phajdan.jr Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  09 Nov 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> package.mask:
+  Mask sci-geosciences/osgearth for removal in 30 days, bug #484786.
 
   06 Nov 2013; Pacho Ramos <pacho@gentoo.org> arch/x86/package.use.mask:
   Keywords recovered
